--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,5 +14,5 @@ jobs:
           - lint_yaml
     steps:
       - uses: actions/checkout@v2
-      - name: Run ${{ matrix.command }}{}
-        run: make ${{ matrix.command }}{}
+      - name: Run ${{ matrix.command }}
+        run: make ${{ matrix.command }}
