Set default values
To prevent breaking the reclass inventory.

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -1,6 +1,8 @@
 parameters:
   openshift4_nodes:
     namespace: openshift-machine-api
+    projectName: none
+    infrastructureID: none
     defaultSpecs:
       aws: {}
       azure: {}
