--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,5 +1,11 @@
+#
+# File managed by ModuleSync - Do Not Edit
+#
+# The name and title can be customized in `.sync.yml` with `'docs/antora.yml'.title`, `'docs/antora.yml'.name`
+#
+
 name: openshift4-nodes
-title: OpenShift 4 Machine Management
+title: OpenShift 4 Nodes
 version: master
 start_page: ROOT:index.adoc
 nav:
