Configure max pods per node of 110 by default

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -45,4 +45,11 @@ parameters:
 
     nodeGroups: {}
 
-    kubeletConfigs: {}
+    kubeletConfigs:
+      workers:
+        machineConfigPoolSelector:
+          matchExpressions:
+            key: pools.operator.machineconfiguration.openshift.io/worker
+            operator: Exists
+        kubeletConfig:
+          maxPods: 110
