Fix default matchExpression in kubelet

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -49,7 +49,7 @@ parameters:
       workers:
         machineConfigPoolSelector:
           matchExpressions:
-            key: pools.operator.machineconfiguration.openshift.io/worker
-            operator: Exists
+            - key: pools.operator.machineconfiguration.openshift.io/worker
+              operator: Exists
         kubeletConfig:
           maxPods: 110
