--- a/tests/golden/defaults/openshift4-nodes/openshift4-nodes/10_kubeletconfigs.yaml
+++ b/tests/golden/defaults/openshift4-nodes/openshift4-nodes/10_kubeletconfigs.yaml
@@ -13,5 +13,5 @@ spec:
     maxPods: 110
   machineConfigPoolSelector:
     matchExpressions:
-      key: pools.operator.machineconfiguration.openshift.io/worker
-      operator: Exists
+      - key: pools.operator.machineconfiguration.openshift.io/worker
+        operator: Exists
