--- a/class/openshift4-nodes.yml
+++ b/class/openshift4-nodes.yml
@@ -8,5 +8,6 @@ parameters:
       - input_paths:
           - openshift4-nodes/component/machine-sets.jsonnet
           - openshift4-nodes/component/kubelet.jsonnet
+          - openshift4-nodes/component/oc-debug-node.jsonnet
         input_type: jsonnet
         output_path: openshift4-nodes/
