--- a/.sync.yml
+++ b/.sync.yml
@@ -1,8 +1,4 @@
 :global:
-  componentName: openshift4-nodes
+  componentName: OpenShift 4 Nodes
   githubUrl: https://github.com/appuio/component-openshift4-nodes
   feature_goldenTests: true
-
-docs/antora.yml:
-  name: openshift4-nodes
-  title: OpenShift 4 Nodes
