Add test case for Project Syn metrics scraping

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,6 +34,7 @@ jobs:
         instance:
           - defaults
           - maxpods
+          - syn-monitoring
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
@@ -50,6 +51,7 @@ jobs:
         instance:
           - defaults
           - maxpods
+          - syn-monitoring
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
