--- a/tests/syn-monitoring.yml
+++ b/tests/syn-monitoring.yml
@@ -1,4 +1,23 @@
+applications:
+  - prometheus
+
 parameters:
+  kapitan:
+    dependencies:
+      - type: https
+        source: https://raw.githubusercontent.com/projectsyn/component-prometheus/master/lib/prometheus.libsonnet
+        output_path: vendor/lib/prometheus.libsonnet
+
   openshift4_nodes:
-    syn_monitoring:
+    monitoring:
       enabled: true
+
+  prometheus:
+    defaultInstance: monitoring
+    base: {}
+    instances:
+      monitoring:
+        common:
+          namespace: syn-monitoring
+        prometheus:
+          enabled: true
