--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -59,3 +59,8 @@ parameters:
     monitoring:
       enabled: false
       instance: ''
+      enableServiceMonitors:
+        cluster-autoscaler-operator: true
+        machine-api-controllers: true
+        machine-api-operator: true
+        machine-config-daemon: true
