--- a/tests/syn-monitoring.yml
+++ b/tests/syn-monitoring.yml
@@ -11,6 +11,8 @@ parameters:
   openshift4_nodes:
     monitoring:
       enabled: true
+      enableServiceMonitors:
+        cluster-autoscaler-operator: false
 
   prometheus:
     defaultInstance: monitoring
