--- a/tests/golden/syn-monitoring/openshift4-nodes/openshift4-nodes/serviceMonitors.yaml
+++ b/tests/golden/syn-monitoring/openshift4-nodes/openshift4-nodes/serviceMonitors.yaml
@@ -10,36 +10,36 @@ spec:
   endpoints:
     - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       interval: 30s
+      metricRelabelings:
+        - action: drop
+          regex: (go_.*|process_.*|promhttp_.*)
+          sourceLabels:
+            - __name__
       port: machine-mtrc
-      relabelings:
-        - action: drop
-          regex: (go_.*|process_.*|promhttp_.*)
-          sourceLabels:
-            - __name__
       scheme: https
       tlsConfig:
         caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
         serverName: machine-api-controllers.openshift-machine-api.svc
     - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       interval: 30s
+      metricRelabelings:
+        - action: drop
+          regex: (go_.*|process_.*|promhttp_.*)
+          sourceLabels:
+            - __name__
       port: machineset-mtrc
-      relabelings:
-        - action: drop
-          regex: (go_.*|process_.*|promhttp_.*)
-          sourceLabels:
-            - __name__
       scheme: https
       tlsConfig:
         caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
         serverName: machine-api-controllers.openshift-machine-api.svc
     - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       interval: 30s
-      port: mhc-mtrc
-      relabelings:
+      metricRelabelings:
         - action: drop
           regex: (go_.*|process_.*|promhttp_.*)
           sourceLabels:
             - __name__
+      port: mhc-mtrc
       scheme: https
       tlsConfig:
         caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
@@ -63,12 +63,12 @@ spec:
   endpoints:
     - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       interval: 30s
-      port: https
-      relabelings:
+      metricRelabelings:
         - action: drop
           regex: (go_.*|process_.*|promhttp_.*)
           sourceLabels:
             - __name__
+      port: https
       scheme: https
       tlsConfig:
         caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
@@ -92,13 +92,14 @@ spec:
   endpoints:
     - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       interval: 30s
-      path: /metrics
-      port: metrics
-      relabelings:
+      metricRelabelings:
         - action: drop
           regex: (go_.*|process_.*|promhttp_.*)
           sourceLabels:
             - __name__
+      path: /metrics
+      port: metrics
+      relabelings:
         - action: replace
           regex: ;(.*)
           replacement: $1
