Use `monitoring.instance=null` to indicate that the default instance should be used

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -58,7 +58,7 @@ parameters:
 
     monitoring:
       enabled: true
-      instance: ''
+      instance: null
       enableServiceMonitors:
         cluster-autoscaler-operator: true
         machine-api-controllers: true
