Only render GCP-specific fields when cloud is GCP
The GCP-specific fields are not supported by ProviderSpecs like
`awsproviderconfig.openshift.io/v1beta1` or `vsphereprovider.openshift.io/v1beta1`.
Rendering them into the ProviderSpec by default makes the MachineSet
part of this component incompatible with any other ProviderSpec than `gcpprovider.openshift.io/v1beta1`.

Fixes #15

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,6 +33,7 @@ jobs:
       matrix:
         instance:
           - defaults
+          - gcp
           - maxpods
           - syn-monitoring
     defaults:
@@ -50,6 +51,7 @@ jobs:
       matrix:
         instance:
           - defaults
+          - gcp
           - maxpods
           - syn-monitoring
     defaults:
