Add test to override default ProviderSpec value
Closes #16

--- a/tests/golden/gcp/openshift4-nodes/openshift4-nodes/machineset-infra-a.yaml
+++ b/tests/golden/gcp/openshift4-nodes/openshift4-nodes/machineset-infra-a.yaml
@@ -32,7 +32,7 @@ spec:
           canIPForward: false
           credentialsSecret:
             name: gcp-cloud-credentials
-          deletionProtection: false
+          deletionProtection: true
           disks:
             - autoDelete: true
               boot: true
