--- a/tests/gcp.yml
+++ b/tests/gcp.yml
@@ -16,6 +16,12 @@ parameters:
         instanceType: n1-standard-8
         multiAz: true
         replicas: 3
+        spec:
+          template:
+            spec:
+              providerSpec:
+                value:
+                  deletionProtection: true
       worker:
         instanceType: n1-standard-8
         replicas: 3
