Add support for annotations on MachineSets
This allows the configuration of custom annotations on MachineSets which
are used by operators like the [OpenShift MachineSet EgressCIDR operator](https://github.com/appuio/openshift-machineset-egress-cidr-operator).

--- a/tests/golden/gcp/openshift4-nodes/openshift4-nodes/machineset-worker.yaml
+++ b/tests/golden/gcp/openshift4-nodes/openshift4-nodes/machineset-worker.yaml
@@ -1,7 +1,8 @@
 apiVersion: machine.openshift.io/v1beta1
 kind: MachineSet
 metadata:
-  annotations: {}
+  annotations:
+    appuio.ch/egress-cidrs: 10.0.0.0/24
   labels:
     machine.openshift.io/cluster-api-cluster: infra-id
     name: worker
