--- a/tests/gcp.yml
+++ b/tests/gcp.yml
@@ -23,6 +23,8 @@ parameters:
                 value:
                   deletionProtection: true
       worker:
+        annotations:
+          appuio.ch/egress-cidrs: 10.0.0.0/24
         instanceType: n1-standard-8
         replicas: 3
         spec:
