Add support for ContainerRuntimeConfigs

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -45,6 +45,8 @@ parameters:
 
     nodeGroups: {}
 
+    containerRuntimeConfigs: {}
+
     kubeletConfigs:
       workers:
         machineConfigPoolSelector:
