--- a/class/openshift4-nodes.yml
+++ b/class/openshift4-nodes.yml
@@ -8,6 +8,7 @@ parameters:
       - input_paths:
           - openshift4-nodes/component/machine-sets.jsonnet
           - openshift4-nodes/component/kubelet.jsonnet
+          - openshift4-nodes/component/container-runtime.jsonnet
           - openshift4-nodes/component/oc-debug-node.jsonnet
           - openshift4-nodes/component/metrics.jsonnet
         input_type: jsonnet
