--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,6 +35,7 @@ jobs:
           - defaults
           - gcp
           - maxpods
+          - pidslimit
           - syn-monitoring
     defaults:
       run:
@@ -53,6 +54,7 @@ jobs:
           - defaults
           - gcp
           - maxpods
+          - pidslimit
           - syn-monitoring
     defaults:
       run:
