Add option to configure machine config pools

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -45,8 +45,15 @@ parameters:
 
     nodeGroups: {}
 
-    containerRuntimeConfigs: {}
+    machineConfigPools:
+      master: {}
+      worker: {}
 
+      infra: {}
+      app: {}
+      storage: {}
+
+    containerRuntimeConfigs: {}
     kubeletConfigs:
       workers:
         machineConfigPoolSelector:
