--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,6 +37,7 @@ jobs:
           - maxpods
           - pidslimit
           - syn-monitoring
+          - machineconfig
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
@@ -56,6 +57,7 @@ jobs:
           - maxpods
           - pidslimit
           - syn-monitoring
+          - machineconfig
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
