Make kubelet config configurable from machine config pool

--- a/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/10_kubeletconfigs.yaml
+++ b/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/10_kubeletconfigs.yaml
@@ -6,6 +6,24 @@ metadata:
     app.kubernetes.io/component: openshift4-nodes
     app.kubernetes.io/managed-by: commodore
     app.kubernetes.io/name: openshift4-nodes
+    name: app
+  name: app
+spec:
+  kubeletConfig:
+    maxPods: 200
+  machineConfigPoolSelector:
+    matchExpressions:
+      - key: pools.operator.machineconfiguration.openshift.io/app
+        operator: Exists
+---
+apiVersion: machineconfiguration.openshift.io/v1
+kind: KubeletConfig
+metadata:
+  annotations: {}
+  labels:
+    app.kubernetes.io/component: openshift4-nodes
+    app.kubernetes.io/managed-by: commodore
+    app.kubernetes.io/name: openshift4-nodes
     name: workers
   name: workers
 spec:
