Add option to configure additional machine configs

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -46,6 +46,7 @@ parameters:
     nodeGroups: {}
 
     machineConfigPools:
+      # master and worker pools are not managed by the component
       master: {}
       worker: {}
 
@@ -53,6 +54,7 @@ parameters:
       app: {}
       storage: {}
 
+    machineConfigs: {}
     containerRuntimeConfigs: {}
     kubeletConfigs:
       workers:
