Also look at machine configs with the full name label
OpenShift doesn't really look at the labelselector of the pool and just
assumes that it matches labels with the name

--- a/tests/golden/defaults/openshift4-nodes/openshift4-nodes/machineconfigpool-app.yaml
+++ b/tests/golden/defaults/openshift4-nodes/openshift4-nodes/machineconfigpool-app.yaml
@@ -16,6 +16,7 @@ spec:
         operator: In
         values:
           - worker
+          - x-app
           - app
   nodeSelector:
     matchLabels:
