--- a/tests/golden/defaults/openshift4-nodes/openshift4-nodes/machineconfigpool-storage.yaml
+++ b/tests/golden/defaults/openshift4-nodes/openshift4-nodes/machineconfigpool-storage.yaml
@@ -16,6 +16,7 @@ spec:
         operator: In
         values:
           - worker
+          - x-storage
           - storage
   nodeSelector:
     matchLabels:
