--- a/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/machineconfigpool-app.yaml
+++ b/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/machineconfigpool-app.yaml
@@ -16,6 +16,7 @@ spec:
         operator: In
         values:
           - worker
+          - x-app
           - app
   nodeSelector:
     matchLabels:
