--- a/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/machineconfigpool-flex.yaml
+++ b/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/machineconfigpool-flex.yaml
@@ -16,6 +16,7 @@ spec:
         operator: In
         values:
           - worker
+          - x-flex
           - flex
   nodeSelector:
     matchLabels:
