--- a/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/machineconfigpool-infra.yaml
+++ b/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/machineconfigpool-infra.yaml
@@ -16,6 +16,7 @@ spec:
         operator: In
         values:
           - worker
+          - x-infra
           - infra
   nodeSelector:
     matchLabels:
