Remove invalid machine config from golden tests

--- a/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/20_containerruntimeconfigs.yaml
+++ b/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/20_containerruntimeconfigs.yaml
@@ -9,8 +9,9 @@ metadata:
     name: app
   name: app
 spec:
+  containerRuntimeConfig:
+    pidsLimit: 1337
   machineConfigPoolSelector:
     matchExpressions:
       - key: pools.operator.machineconfiguration.openshift.io/app
         operator: Exists
-  pidsLimit: 1337
