--- a/tests/golden/pidslimit/openshift4-nodes/openshift4-nodes/01_aggregated_clusterroles.yaml
+++ b/tests/golden/pidslimit/openshift4-nodes/openshift4-nodes/01_aggregated_clusterroles.yaml
@@ -1,10 +1,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  annotations:
-    rbac.authorization.k8s.io/aggregate-to-cluster-reader: 'true'
+  annotations: {}
   labels:
     name: syn-openshift4-nodes-cluster-reader
+    rbac.authorization.k8s.io/aggregate-to-cluster-reader: 'true'
   name: syn-openshift4-nodes-cluster-reader
 rules:
   - apiGroups:
