Add test case which removes a machineconfigpool

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,6 +38,7 @@ jobs:
           - pidslimit
           - syn-monitoring
           - machineconfig
+          - remove-machineconfigpool
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
@@ -58,6 +59,7 @@ jobs:
           - pidslimit
           - syn-monitoring
           - machineconfig
+          - remove-machineconfigpool
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
