--- a/class/openshift4-nodes.yml
+++ b/class/openshift4-nodes.yml
@@ -9,6 +9,7 @@ parameters:
           - openshift4-nodes/component/machine-sets.jsonnet
           - openshift4-nodes/component/machine-config-pools.jsonnet
           - openshift4-nodes/component/machine-configs.jsonnet
+          - openshift4-nodes/component/node-config.jsonnet
           - openshift4-nodes/component/kubelet.jsonnet
           - openshift4-nodes/component/container-runtime.jsonnet
           - openshift4-nodes/component/oc-debug-node.jsonnet
