--- a/tests/golden/pidslimit/openshift4-nodes/openshift4-nodes/10_nodeconfig.yaml
+++ b/tests/golden/pidslimit/openshift4-nodes/openshift4-nodes/10_nodeconfig.yaml
@@ -3,6 +3,9 @@ kind: Node
 metadata:
   annotations: {}
   labels:
+    app.kubernetes.io/component: openshift4-nodes
+    app.kubernetes.io/managed-by: commodore
+    app.kubernetes.io/name: openshift4-nodes
     name: cluster
   name: cluster
 spec:
