Fix warning for `kubeletConfig.maxPods > 110`
Until now, any other `kubeletConfig` contents were dropped when the
component emitted the warning about `maxPods > 110`. This commit adjusts
the warning implementation to not overwrite the `kubeletConfig`
contents completely.

--- a/tests/golden/maxpods/openshift4-nodes/openshift4-nodes/10_kubeletconfigs.yaml
+++ b/tests/golden/maxpods/openshift4-nodes/openshift4-nodes/10_kubeletconfigs.yaml
@@ -11,6 +11,8 @@ metadata:
 spec:
   kubeletConfig:
     maxPods: 999
+    systemReserved:
+      memory: 2Gi
   machineConfigPoolSelector:
     matchExpressions:
       - key: pools.operator.machineconfiguration.openshift.io/worker
