Implement DaemonSet which runs `ip monitor` on all nodes

--- a/class/openshift4-nodes.yml
+++ b/class/openshift4-nodes.yml
@@ -15,5 +15,6 @@ parameters:
           - openshift4-nodes/component/oc-debug-node.jsonnet
           - openshift4-nodes/component/aggregated-clusterroles.jsonnet
           - openshift4-nodes/component/egress-interfaces.jsonnet
+          - openshift4-nodes/component/ip-monitor-daemonset.jsonnet
         input_type: jsonnet
         output_path: openshift4-nodes/
