--- a/tests/gcp.yml
+++ b/tests/gcp.yml
@@ -12,6 +12,9 @@ parameters:
       - europe-west6-c
 
     nodeGroups:
+      master:
+        replicas: 5
+        instanceType: super-trooper
       infra:
         instanceType: n1-standard-8
         multiAz: true
