Apply suggestions from code review
Co-authored-by: Simon Gerber <simon.gerber@vshn.ch>

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -43,7 +43,7 @@ parameters:
                 tags: []
                 userDataSecret:
                   name: worker-user-data
-    cpDefaultSpecs:
+    controlPlaneDefaultSpecs:
       vsphere: {}
       aws: {}
       azure: {}
