--- a/tests/golden/gcp/openshift4-nodes/openshift4-nodes/machineset-master.yaml
+++ b/tests/golden/gcp/openshift4-nodes/openshift4-nodes/machineset-master.yaml
@@ -57,5 +57,5 @@ spec:
             tags:
               - infra-id-master
             userDataSecret:
-              name: worker-user-data
+              name: master-user-data
             zone: europe-west6-a
