--- a/tests/machineconfig.yml
+++ b/tests/machineconfig.yml
@@ -91,3 +91,45 @@ parameters:
     egressInterfaces:
       machineConfigPools:
         - infra
+
+    machineSets:
+      worker:
+        metadata:
+          labels:
+            machine.openshift.io/cluster-api-cluster: c-cluster-1
+        spec:
+          deletePolicy: Oldest
+          replicas: 3
+          selector:
+            matchLabels:
+              machine.openshift.io/cluster-api-cluster: c-cluster-1
+              machine.openshift.io/cluster-api-machineset: worker
+          template:
+            metadata:
+              labels:
+                machine.openshift.io/cluster-api-cluster: c-cluster-1
+                machine.openshift.io/cluster-api-machine-role: app
+                machine.openshift.io/cluster-api-machine-type: app
+                machine.openshift.io/cluster-api-machineset: worker
+            spec:
+              lifecycleHooks: {}
+              metadata:
+                labels:
+                  node-role.kubernetes.io/app: ""
+                  node-role.kubernetes.io/worker: ""
+              providerSpec:
+                value:
+                  antiAffinityKey: worker
+                  baseDomain: c-cluster-1.vshnmanaged.net
+                  flavor: plus-16-4
+                  image: custom:rhcos-4.16
+                  interfaces:
+                    - addresses:
+                        - subnetUUID: 1971d4c3-0065-41fc-82f4-c26cf2fe4f9a
+                      type: Private
+                  rootVolumeSizeGB: 100
+                  tokenSecret:
+                    name: cloudscale-rw-token
+                  userDataSecret:
+                    name: cloudscale-user-data
+                  zone: lpg1
