Add support for configuring ClusterAutoscaler and MachineAutoscalers

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -86,6 +86,12 @@ parameters:
 
     machineSets: {}
 
+    autoscaling:
+      enabled: false
+      clusterAutoscaler: {}
+      machineAutoscalers: {}
+      priorityExpanderConfig: {}
+
     machineConfigPools:
       infra: {}
       app: {}
