--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,6 +38,7 @@ jobs:
           - pidslimit
           - machineconfig
           - remove-machineconfigpool
+          - autoscaling
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
@@ -58,6 +59,7 @@ jobs:
           - pidslimit
           - machineconfig
           - remove-machineconfigpool
+          - autoscaling
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
