Update from template
Template version: main (`f12cbb4`)

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -1,5 +1,7 @@
 parameters:
   openshift4_nodes:
+    =_metadata:
+      multi_tenant: true
     machineApiNamespace: openshift-machine-api
     projectName: none
     infrastructureID: none
