--- a/class/openshift4-nodes.yml
+++ b/class/openshift4-nodes.yml
@@ -4,7 +4,7 @@ parameters:
       - input_paths:
           - openshift4-nodes/component/app.jsonnet
         input_type: jsonnet
-        output_path: apps/
+        output_path: .
       - input_paths:
           - openshift4-nodes/component/machine-sets.jsonnet
           - openshift4-nodes/component/machine-config-pools.jsonnet
