Add metrics to export autoscaling parameters

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -93,6 +93,9 @@ parameters:
       clusterAutoscaler: {}
       machineAutoscalers: {}
       priorityExpanderConfig: {}
+      metrics:
+        enabled: true
+        extraLabels: {}
 
     machineConfigPools:
       infra: {}
