--- a/tests/autoscaling.yml
+++ b/tests/autoscaling.yml
@@ -14,6 +14,10 @@ parameters:
         app:
           minReplicas: 3
           maxReplicas: 6
+      metrics:
+        enabled: true
+        extraLabels:
+          foo: bar
 
     machineSets:
       app:
