[WIP] Add capacity alerts

--- a/tests/autoscaling.yml
+++ b/tests/autoscaling.yml
@@ -54,3 +54,8 @@ parameters:
                   userDataSecret:
                     name: cloudscale-user-data
                   zone: rma1
+    capacityAlerts:
+      enabled: true
+      monitorMachineSets:
+      - app
+      - ~worker
