--- a/tests/golden/autoscaling/openshift4-nodes/openshift4-nodes/machine_autoscalers.yaml
+++ b/tests/golden/autoscaling/openshift4-nodes/openshift4-nodes/machine_autoscalers.yaml
@@ -1,11 +1,13 @@
 apiVersion: autoscaling.openshift.io/v1beta1
 kind: MachineAutoscaler
+maxReplicas: 6
 metadata:
   annotations: {}
   labels:
     name: app
   name: app
   namespace: openshift-machine-api
+minReplicas: 3
 spec:
   maxReplicas: 6
   minReplicas: 3
