--- a/class/openshift4-nodes.yml
+++ b/class/openshift4-nodes.yml
@@ -17,5 +17,6 @@ parameters:
           - openshift4-nodes/component/egress-interfaces.jsonnet
           - openshift4-nodes/component/autoscaler.jsonnet
           - openshift4-nodes/component/prune-machine-configs.jsonnet
+          - openshift4-nodes/component/capacity.jsonnet
         input_type: jsonnet
         output_path: openshift4-nodes/
