Update from template
Template version: main (98d16f9)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,6 +39,7 @@ jobs:
           - machineconfig
           - remove-machineconfigpool
           - autoscaling
+          - capacity
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
@@ -60,6 +61,7 @@ jobs:
           - machineconfig
           - remove-machineconfigpool
           - autoscaling
+          - capacity
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
