Add golden test for capacity alert rules

--- a/tests/capacity.yml
+++ b/tests/capacity.yml
@@ -1,3 +1,35 @@
 # Overwrite parameters here
+parameters:
+  kapitan:
+    dependencies:
+      - type: https
+        source: https://raw.githubusercontent.com/appuio/component-openshift4-monitoring/v6.8.0/lib/openshift4-monitoring-prom.libsonnet
+        output_path: vendor/lib/prom.libsonnet
+  openshift4_monitoring:
+    namespace: foo
 
-# parameters: {...}
+  openshift4_nodes:
+    capacityAlerts:
+      enabled: true
+      groupByNodeLabels:
+        - label_appuio_io_node_class
+      groups:
+        PodCapacity:
+          rules:
+            ExpectTooManyPods:
+              enabled: true
+        ResourceRequests:
+          rules:
+            ExpectTooMuchMemoryRequested:
+              enabled: true
+            ExpectTooMuchCPURequested:
+              enabled: true
+        MemoryCapacity:
+          rules:
+            ExpectClusterLowOnMemory:
+              enabled: true
+        CpuCapacity:
+          rules:
+            ExpectClusterCpuUsageHigh:
+              enabled: true
+
