--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -137,7 +137,7 @@ parameters:
       - worker
       groupByNodeLabels: []
       groups:
-        PodCapacity:
+        NodesPodCapacity:
           rules:
             TooManyPods:
               enabled: true
@@ -166,7 +166,7 @@ parameters:
                 # How far into the future to predict (in seconds)
                 predict: '3*24*60*60'
 
-        ResourceRequests:
+        NodesResourceRequests:
           rules:
             TooMuchMemoryRequested:
               enabled: true
@@ -221,7 +221,7 @@ parameters:
                 # How far into the future to predict (in seconds)
                 predict: '3*24*60*60'
 
-        MemoryCapacity:
+        NodesMemoryCapacity:
           rules:
             ClusterLowOnMemory:
               enabled: true
@@ -250,7 +250,7 @@ parameters:
                 # How far into the future to predict (in seconds)
                 predict: '3*24*60*60'
 
-        CpuCapacity:
+        NodesCpuCapacity:
           rules:
             ClusterCpuUsageHigh:
               enabled: true
@@ -280,7 +280,7 @@ parameters:
                 # How far into the future to predict (in seconds)
                 predict: '3*24*60*60'
 
-        UnusedCapacity:
+        NodesUnusedCapacity:
           rules:
             ClusterHasUnusedNodes:
               enabled: true
