--- a/tests/golden/autoscaling/openshift4-nodes/openshift4-nodes/capacity_alerting_rules.yaml
+++ b/tests/golden/autoscaling/openshift4-nodes/openshift4-nodes/capacity_alerting_rules.yaml
@@ -9,7 +9,7 @@ metadata:
   namespace: foo
 spec:
   groups:
-    - name: syn-CpuCapacity
+    - name: syn-NodesCpuCapacity
       rules:
         - alert: SYN_ClusterCpuUsageHigh
           annotations:
@@ -36,7 +36,7 @@ spec:
             severity: warning
             syn: 'true'
             syn_component: openshift4-monitoring
-    - name: syn-MemoryCapacity
+    - name: syn-NodesMemoryCapacity
       rules:
         - alert: SYN_ClusterLowOnMemory
           annotations:
@@ -63,7 +63,7 @@ spec:
             severity: warning
             syn: 'true'
             syn_component: openshift4-monitoring
-    - name: syn-PodCapacity
+    - name: syn-NodesPodCapacity
       rules:
         - alert: SYN_TooManyPods
           annotations:
@@ -92,7 +92,7 @@ spec:
             severity: warning
             syn: 'true'
             syn_component: openshift4-monitoring
-    - name: syn-ResourceRequests
+    - name: syn-NodesResourceRequests
       rules:
         - alert: SYN_TooMuchCPURequested
           annotations:
@@ -148,7 +148,7 @@ spec:
             severity: warning
             syn: 'true'
             syn_component: openshift4-monitoring
-    - name: syn-UnusedCapacity
+    - name: syn-NodesUnusedCapacity
       rules:
         - alert: SYN_ClusterHasUnusedNodes
           annotations:
