Add option to ignore argo sync of scaleDown.enable field in the ClusterAutoScaler spec

--- a/tests/autoscaling.yml
+++ b/tests/autoscaling.yml
@@ -10,6 +10,7 @@ parameters:
   openshift4_nodes:
     autoscaling:
       enabled: true
+      ignoreDownScalingSync: true
       machineAutoscalers:
         app:
           minReplicas: 3
