Use correct api group to ignore cluster autoscaler difference

--- a/tests/golden/autoscaling/openshift4-nodes/apps/openshift4-nodes.yaml
+++ b/tests/golden/autoscaling/openshift4-nodes/apps/openshift4-nodes.yaml
@@ -5,7 +5,7 @@ spec:
         - /spec/replicas
       kind: MachineSet
       name: app
-    - group: autoscaling.openshift.io/v1
+    - group: autoscaling.openshift.io
       jsonPointers:
         - /spec/scaleDown/enabled
       kind: ClusterAutoscaler
