Implement support for configuring node disruption policies
Node disruption policy entries can be provided via component parameter
`nodeDisruptionPolicies` or by adding annotation
`openshift4-nodes.syn.tools/node-disruption-policies`  with
string-encoded JSON contents on `MachineConfig` resources.

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -132,6 +132,11 @@ parameters:
         namespace: cilium
         name: eip-shadow-ranges
 
+    nodeDisruptionPolicies:
+      files: {}
+      units: {}
+      sshkey_actions: []
+
     images:
       oc:
         registry: quay.io
