--- a/class/openshift4-nodes.yml
+++ b/class/openshift4-nodes.yml
@@ -18,5 +18,6 @@ parameters:
           - openshift4-nodes/component/autoscaler.jsonnet
           - openshift4-nodes/component/prune-machine-configs.jsonnet
           - openshift4-nodes/component/capacity.jsonnet
+          - openshift4-nodes/component/node-disruption-policies.jsonnet
         input_type: jsonnet
         output_path: openshift4-nodes/
