Add test case for node disruption policies
Rendered from template version: main (98d16f9)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,6 +40,7 @@ jobs:
           - remove-machineconfigpool
           - autoscaling
           - capacity
+          - node-disruption-policies
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
@@ -62,6 +63,7 @@ jobs:
           - remove-machineconfigpool
           - autoscaling
           - capacity
+          - node-disruption-policies
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
