Add openstack test case
Rendered from template version: main (56dd2ee)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,6 +42,7 @@ jobs:
           - capacity
           - node-disruption-policies
           - cloudscale
+          - openstack
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
@@ -66,6 +67,7 @@ jobs:
           - capacity
           - node-disruption-policies
           - cloudscale
+          - openstack
     defaults:
       run:
         working-directory: ${{ env.COMPONENT_NAME }}
