--- a/tests/golden/maxpods/openshift4-nodes/openshift4-nodes/01_aggregated_clusterroles.yaml
+++ b/tests/golden/maxpods/openshift4-nodes/openshift4-nodes/01_aggregated_clusterroles.yaml
@@ -15,3 +15,11 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - machine.openshift.io
+    resources:
+      - controlplanemachinesets
+    verbs:
+      - get
+      - list
+      - watch
