Make default cloudscale anti-affinity keys unique per cluster

--- a/tests/golden/cloudscale/openshift4-nodes/openshift4-nodes/machineset-infra.yaml
+++ b/tests/golden/cloudscale/openshift4-nodes/openshift4-nodes/machineset-infra.yaml
@@ -28,7 +28,7 @@ spec:
           syn.tools/cluster-id: c-green-test-1234
       providerSpec:
         value:
-          antiAffinityKey: infra
+          antiAffinityKey: c-green-test-1234_infra
           baseDomain: my.base.domain
           flavor: plus-16-4
           image: custom:rhcos-4.17
