--- a/tests/golden/cloudscale/openshift4-nodes/openshift4-nodes/machineset-worker.yaml
+++ b/tests/golden/cloudscale/openshift4-nodes/openshift4-nodes/machineset-worker.yaml
@@ -28,7 +28,7 @@ spec:
           syn.tools/cluster-id: c-green-test-1234
       providerSpec:
         value:
-          antiAffinityKey: worker
+          antiAffinityKey: c-green-test-1234_worker
           baseDomain: my.base.domain
           flavor: plus-16-4
           image: custom:rhcos-4.17
