Allow aggregating machinesets by regexp in capacity alerts

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -154,6 +154,7 @@ parameters:
         - app
       monitorMachineSets:
         - worker
+      aggregateMachineSets: {}
       groupByNodeLabels: []
       groups:
         NodesPodCapacity:
