--- a/tests/golden/autoscaling-scheduled/openshift4-nodes/openshift4-nodes/capacity_alerting_rules.yaml
+++ b/tests/golden/autoscaling-scheduled/openshift4-nodes/openshift4-nodes/capacity_alerting_rules.yaml
@@ -21,7 +21,7 @@ spec:
             runbook_url: https://hub.syn.tools/openshift4-monitoring/runbooks/cpucapacity.html#SYN_ClusterCpuUsageHigh
             syn_component: openshift4-nodes
           expr: sum by (machineset) (label_replace(rate(node_cpu_seconds_total{mode="idle"}[15m]),
-            "node", "$1", "instance", "(.+)") * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"},
+            "node", "$1", "instance", "(.+)") * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"},
             "node", "$1", "node_ref", "(.+)")) + on(machineset) (max by(machineset)
             (component_openshift4_nodes_machineset_replicas_max or on(machineset)
             label_replace(mapi_machine_set_status_replicas_available, "machineset",
@@ -48,7 +48,7 @@ spec:
             runbook_url: https://hub.syn.tools/openshift4-monitoring/runbooks/memorycapacity.html#SYN_ClusterMemoryUsageHigh
             syn_component: openshift4-nodes
           expr: sum by (machineset) (label_replace(node_memory_MemAvailable_bytes,
-            "node", "$1", "instance", "(.+)") * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"},
+            "node", "$1", "instance", "(.+)") * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"},
             "node", "$1", "node_ref", "(.+)")) + on(machineset) (max by(machineset)
             (component_openshift4_nodes_machineset_replicas_max or on(machineset)
             label_replace(mapi_machine_set_status_replicas_available, "machineset",
@@ -75,7 +75,7 @@ spec:
             runbook_url: https://hub.syn.tools/openshift4-monitoring/runbooks/podcapacity.html#SYN_TooManyPods
             syn_component: openshift4-nodes
           expr: sum by (machineset) (kube_node_status_capacity{resource="pods"} *
-            on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"},
+            on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"},
             "node", "$1", "node_ref", "(.+)")) + on(machineset) (max by(machineset)
             (component_openshift4_nodes_machineset_replicas_max or on(machineset)
             label_replace(mapi_machine_set_status_replicas_available, "machineset",
@@ -84,7 +84,7 @@ spec:
             (kube_node_status_capacity{resource="pods"} * on(node) group_left(machineset)
             label_replace(openshift_upgrade_controller_machine_info, "node", "$1",
             "node_ref", "(.+)")) - sum by (machineset) (kubelet_running_pods * on(node)
-            group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"},
+            group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"},
             "node", "$1", "node_ref", "(.+)")) < 1.000000 * max by (machineset) (kube_node_status_capacity{resource="pods"}
             * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info,
             "node", "$1", "node_ref", "(.+)"))
@@ -104,7 +104,7 @@ spec:
             runbook_url: https://hub.syn.tools/openshift4-monitoring/runbooks/resourcerequests.html#SYN_TooMuchCPURequested
             syn_component: openshift4-nodes
           expr: sum by (machineset) (kube_node_status_allocatable{resource="cpu"}
-            * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"},
+            * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"},
             "node", "$1", "node_ref", "(.+)")) + on(machineset) (max by(machineset)
             (component_openshift4_nodes_machineset_replicas_max or on(machineset)
             label_replace(mapi_machine_set_status_replicas_available, "machineset",
@@ -113,7 +113,7 @@ spec:
             (kube_node_status_allocatable{resource="cpu"} * on(node) group_left(machineset)
             label_replace(openshift_upgrade_controller_machine_info, "node", "$1",
             "node_ref", "(.+)")) - sum by (machineset) (kube_pod_resource_request{resource="cpu"}
-            * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"},
+            * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"},
             "node", "$1", "node_ref", "(.+)")) < 1.000000 * max by (machineset) (kube_node_status_allocatable{resource="cpu"}
             * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info,
             "node", "$1", "node_ref", "(.+)"))
@@ -131,7 +131,7 @@ spec:
             runbook_url: https://hub.syn.tools/openshift4-monitoring/runbooks/resourcerequests.html#SYN_TooMuchMemoryRequested
             syn_component: openshift4-nodes
           expr: sum by (machineset) (kube_node_status_allocatable{resource="memory"}
-            * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"},
+            * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"},
             "node", "$1", "node_ref", "(.+)")) + on(machineset) (max by(machineset)
             (component_openshift4_nodes_machineset_replicas_max or on(machineset)
             label_replace(mapi_machine_set_status_replicas_available, "machineset",
@@ -140,7 +140,7 @@ spec:
             (kube_node_status_allocatable{resource="memory"} * on(node) group_left(machineset)
             label_replace(openshift_upgrade_controller_machine_info, "node", "$1",
             "node_ref", "(.+)")) - sum by (machineset) (kube_pod_resource_request{resource="memory"}
-            * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"},
+            * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"},
             "node", "$1", "node_ref", "(.+)")) < 1.000000 * max by (machineset) (kube_node_status_allocatable{resource="memory"}
             * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info,
             "node", "$1", "node_ref", "(.+)"))
@@ -161,23 +161,23 @@ spec:
           expr: |-
             min by (machineset) ((
               label_replace(
-                (sum by (machineset) (kube_node_status_capacity{resource="pods"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"}, "node", "$1", "node_ref", "(.+)")) + on(machineset) (min by(machineset) (component_openshift4_nodes_machineset_replicas_min or on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) - on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) * on(machineset) max by (machineset) (kube_node_status_capacity{resource="pods"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)")) - sum by (machineset) (kubelet_running_pods * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"}, "node", "$1", "node_ref", "(.+)"))) / max by (machineset) (kube_node_status_capacity{resource="pods"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)"))
+                (sum by (machineset) (kube_node_status_capacity{resource="pods"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"}, "node", "$1", "node_ref", "(.+)")) + on(machineset) (min by(machineset) (component_openshift4_nodes_machineset_replicas_min or on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) - on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) * on(machineset) max by (machineset) (kube_node_status_capacity{resource="pods"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)")) - sum by (machineset) (kubelet_running_pods * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"}, "node", "$1", "node_ref", "(.+)"))) / max by (machineset) (kube_node_status_capacity{resource="pods"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)"))
               , "resource", "pods", "", "")
             ) or (
               label_replace(
-                (sum by (machineset) (kube_node_status_allocatable{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"}, "node", "$1", "node_ref", "(.+)")) + on(machineset) (min by(machineset) (component_openshift4_nodes_machineset_replicas_min or on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) - on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) * on(machineset) max by (machineset) (kube_node_status_allocatable{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)")) - sum by (machineset) (kube_pod_resource_request{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"}, "node", "$1", "node_ref", "(.+)"))) / max by (machineset) (kube_node_status_allocatable{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)"))
+                (sum by (machineset) (kube_node_status_allocatable{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"}, "node", "$1", "node_ref", "(.+)")) + on(machineset) (min by(machineset) (component_openshift4_nodes_machineset_replicas_min or on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) - on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) * on(machineset) max by (machineset) (kube_node_status_allocatable{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)")) - sum by (machineset) (kube_pod_resource_request{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"}, "node", "$1", "node_ref", "(.+)"))) / max by (machineset) (kube_node_status_allocatable{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)"))
               , "resource", "requested_memory", "", "")
             ) or (
               label_replace(
-                (sum by (machineset) (kube_node_status_allocatable{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"}, "node", "$1", "node_ref", "(.+)")) + on(machineset) (min by(machineset) (component_openshift4_nodes_machineset_replicas_min or on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) - on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) * on(machineset) max by (machineset) (kube_node_status_allocatable{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)")) - sum by (machineset) (kube_pod_resource_request{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"}, "node", "$1", "node_ref", "(.+)"))) / max by (machineset) (kube_node_status_allocatable{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)"))
+                (sum by (machineset) (kube_node_status_allocatable{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"}, "node", "$1", "node_ref", "(.+)")) + on(machineset) (min by(machineset) (component_openshift4_nodes_machineset_replicas_min or on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) - on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) * on(machineset) max by (machineset) (kube_node_status_allocatable{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)")) - sum by (machineset) (kube_pod_resource_request{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"}, "node", "$1", "node_ref", "(.+)"))) / max by (machineset) (kube_node_status_allocatable{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)"))
               , "resource", "requested_cpu", "", "")
             ) or (
               label_replace(
-                sum by (machineset) (label_replace(node_memory_MemAvailable_bytes, "node", "$1", "instance", "(.+)") * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"}, "node", "$1", "node_ref", "(.+)")) + on(machineset) (min by(machineset) (component_openshift4_nodes_machineset_replicas_min or on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) - on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) * on(machineset) max by (machineset) (kube_node_status_capacity{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)")) / max by (machineset) (kube_node_status_capacity{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)"))
+                sum by (machineset) (label_replace(node_memory_MemAvailable_bytes, "node", "$1", "instance", "(.+)") * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"}, "node", "$1", "node_ref", "(.+)")) + on(machineset) (min by(machineset) (component_openshift4_nodes_machineset_replicas_min or on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) - on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) * on(machineset) max by (machineset) (kube_node_status_capacity{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)")) / max by (machineset) (kube_node_status_capacity{resource="memory"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)"))
               , "resource", "memory", "", "")
             ) or (
               label_replace(
-                sum by (machineset) (label_replace(rate(node_cpu_seconds_total{mode="idle"}[15m]), "node", "$1", "instance", "(.+)") * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app)"}, "node", "$1", "node_ref", "(.+)")) + on(machineset) (min by(machineset) (component_openshift4_nodes_machineset_replicas_min or on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) - on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) * on(machineset) max by (machineset) (kube_node_status_capacity{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)")) / max by (machineset) (kube_node_status_capacity{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)"))
+                sum by (machineset) (label_replace(rate(node_cpu_seconds_total{mode="idle"}[15m]), "node", "$1", "instance", "(.+)") * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info{machineset=~"(app.*|infra.*)"}, "node", "$1", "node_ref", "(.+)")) + on(machineset) (min by(machineset) (component_openshift4_nodes_machineset_replicas_min or on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) - on(machineset) label_replace(mapi_machine_set_status_replicas_available, "machineset", "$1", "name", "(.+)")) * on(machineset) max by (machineset) (kube_node_status_capacity{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)")) / max by (machineset) (kube_node_status_capacity{resource="cpu"} * on(node) group_left(machineset) label_replace(openshift_upgrade_controller_machine_info, "node", "$1", "node_ref", "(.+)"))
               , "resource", "cpu", "", "")
             )
             ) > 4.000000
