Fix `workers` Kubelet config to be applied to all non-master MCPs
Some version of OpenShift has introduced separate
`98-<mcp>-generated-kubelet` machine configs which we weren't aware of
until now. From looking at some MCPs, it seems like those machine
configs take precedence over the `99-worker-generated-kubelet` MC,
therefore silently dropping the Kubelet config managed through the
component's `kubeletConfigs.workers` key.

This commit updates that KubeletConfig to be applied to all MCPs except
the `master` MCP to restore the desired behavior of getting applied to
all worker nodes.

Additionally, since we didn't notice this change for over a year, and
have been running all clusters with `maxPods: 250` in that time without
any issues, we're going ahead with adjusting the component default to
`maxPods: 250` which is currently still the OpenShift default.

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -122,10 +122,10 @@ parameters:
       workers:
         machineConfigPoolSelector:
           matchExpressions:
-            - key: pools.operator.machineconfiguration.openshift.io/worker
-              operator: Exists
+            - key: pools.operator.machineconfiguration.openshift.io/master
+              operator: DoesNotExist
         kubeletConfig:
-          maxPods: 110
+          maxPods: 250
 
 
     debugNamespace: syn-debug-nodes
