--- a/tests/golden/maxpods/openshift4-nodes/openshift4-nodes/10_kubeletconfigs.yaml
+++ b/tests/golden/maxpods/openshift4-nodes/openshift4-nodes/10_kubeletconfigs.yaml
@@ -15,5 +15,5 @@ spec:
       memory: 2Gi
   machineConfigPoolSelector:
     matchExpressions:
-      - key: pools.operator.machineconfiguration.openshift.io/worker
-        operator: Exists
+      - key: pools.operator.machineconfiguration.openshift.io/master
+        operator: DoesNotExist
