--- a/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/10_kubeletconfigs.yaml
+++ b/tests/golden/machineconfig/openshift4-nodes/openshift4-nodes/10_kubeletconfigs.yaml
@@ -28,8 +28,8 @@ metadata:
   name: workers
 spec:
   kubeletConfig:
-    maxPods: 110
+    maxPods: 250
   machineConfigPoolSelector:
     matchExpressions:
-      - key: pools.operator.machineconfiguration.openshift.io/worker
-        operator: Exists
+      - key: pools.operator.machineconfiguration.openshift.io/master
+        operator: DoesNotExist
